--- a/index.html
+++ b/index.html
@@ -246,7 +246,7 @@
             min-width: 200px; 
             max-width: 250px;
             box-shadow: 0 3px 8px rgba(0,0,0,0.1); 
-            z-index: 1103; /* افزایش z-index برای نمایش بالای اسلایدر */
+            z-index: 1101; /* افزایش z-index برای نمایش بالای اسلایدر */
             border-radius: 0 0 6px 6px; 
             opacity: 0; 
             visibility: hidden; 
@@ -421,13 +421,14 @@
         }
         .footer-subscription .subscription-input-group {
             display: flex;
+            flex-direction: row;
             margin-bottom: 10px;
         }
         .footer-subscription input { 
             flex: 1;
             padding: 10px;
             border: 1px solid #eee;
-            border-radius: 5px 0 0 5px;
+            border-radius: 0 5px 5px 0 !important;
             outline: none;
             font-family: inherit;
             transition: border-color 0.3s ease;
@@ -439,10 +440,11 @@
             border: none;
             background-image: var(--new-red-gradient);
             color: #fff;
-            border-radius: 0 5px 5px 0;
+            border-radius: 5px 0 0 5px !important;
             cursor: pointer;
             white-space: nowrap;
             transition: background-image 0.3s ease;
+            margin-right: -1px;
         }
         .footer-subscription button:hover { background-image: linear-gradient(to top, var(--new-red-darker), var(--new-red-primary)); }
         
@@ -497,7 +499,7 @@
             .footer-subscription input,
             .footer-subscription button {
                 width: 100%;
-                border-radius: 5px;
+                border-radius: 5px !important;
                 margin-right: 0;
             }
             .footer-subscription button {
@@ -985,4 +987,4 @@
         }
     </script>
 </body>
-  </html>
+</html>
