--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
    <header>
     <div class="header-banner" style="position: relative; text-align: center; margin: 0; padding: 0;">
         <div style="position: relative; width: 100%; height: 73px; overflow: hidden;">
-            <img src="PIC/logo1/supergraphic.svg" style="width: 100%; height: 100%; object-fit: cover;" alt="نمایندگی گیلان">
+            <img src="supergraphic.svg" style="width: 100%; height: 100%; object-fit: cover;" alt="نمایندگی گیلان">
             <div style="position: absolute; top: 0; left: 0; width: 100%; height: 100%; display: flex; justify-content: center; align-items: center;">
                 <h1 style="color: #fff; font-size: 24px; font-weight: bold; text-shadow: 0 0 10px rgba(0, 0, 0, 0.7); margin: 0 50px 0 0;">نمايندگي رسمي نصب و تعميرات محصولات بوش در استان گيلان</h1>
                 <div class="" style="height: 100px; margin-right:80px; margin-bottom:8px">
